@@ -1,3 +1,10 @@
+Mon Jul 31 16:45:48 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gdk/gdkwindow.c (gdk_window_process_updates_internal): Replace broken, 
+	(broken, Elliot, every single window blank on X) custom code with call
+	to gdk_window_is_viewable() which a) prevents code duplicate and
+	b) works. 
+
 2000-07-31  Elliot Lee  <sopwith@redhat.com>
 
 	* gtk/gtkcolorsel.c: We really do need to include gdkfb.h in order to get the GDK_PARENT_ROOT() macro to work.
